--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>JIRA JR.</h1>
-  <nav class="nav">
+  <nav>
     <button mat-button routerLink="/register" class="nav-link">Registro de tareas</button>
     <button mat-button routerLink="/list" class="nav-link">Lista de tareas</button>
   </nav>
