--- a/src/app/components/register-task/register-task.component.html
+++ b/src/app/components/register-task/register-task.component.html
@@ -1,4 +1,3 @@
-<h2>Ingresa los datos de la tarea:</h2>
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="container">
   <mat-form-field class="others-field" appearance="fill">
     <mat-label>Nombre</mat-label>
@@ -24,6 +23,17 @@
     <mat-label>Persona Asignada</mat-label>
     <input matInput formControlName="assignedperson">
     <mat-error *ngIf="form.get('assignedperson')?.hasError('required')">Campo requerido.</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="others-field" appearance="fill">
+    <mat-label>Nivel de tarea</mat-label>
+    <mat-select formControlName="selection">
+      <mat-option value="Muy importante">Muy importante</mat-option>
+      <mat-option value="Importante">Importante</mat-option>
+      <mat-option value="Básica">Básica</mat-option>
+      <mat-option value="No importante">No importante</mat-option>
+    </mat-select>
+    <mat-error *ngIf="formSubmitted && form.get('selection')?.hasError('required')">Campo requerido.</mat-error>
   </mat-form-field>
 
   <button mat-raised-button type="submit" color="warn" class="others-field">Guardar</button>
