INTENTANDO enviar los datos de la lista al mismo formulario de registro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>JIRA JR.</h1>
   <nav>
-    <button mat-button routerLink="/register" class="nav-link">Registro de tareas</button>
+    <button mat-button routerLink="/register" class="nav-link">Registrar tareas</button>
     <button mat-button routerLink="/list" class="nav-link">Lista de tareas</button>
   </nav>
   <router-outlet></router-outlet>
