--- a/src/app/components/list-task/list-task.component.css
+++ b/src/app/components/list-task/list-task.component.css
@@ -15,3 +15,10 @@
   width: 100%;
   padding: 0;
 }
+
+h3 {
+  text-align: center;
+  font-family: "Abyssinica SIL";
+  color: #404040;
+  padding: 30px;
+}
