--- a/src/app/components/list-task/list-task.component.html
+++ b/src/app/components/list-task/list-task.component.html
@@ -18,6 +18,6 @@
         <button mat-raised-button color="primary" (click)="editTask(task)">Editar</button>
       </mat-list-item>
     </div>
-    <h3 *ngIf="tasks.length === 0">No hay tareas para mostrar</h3>
+<!--    <h3 *ngIf="tasks.length === 0">No hay tareas para mostrar</h3>-->
   </mat-list>
 </div>
