--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h1>JIRA JR.</h1>
   <nav>
-    <button mat-button routerLink="/register-task" class="nav-link">Registrar tareas</button>
-    <button mat-button routerLink="/list-task" class="nav-link">Lista de tareas</button>
+    <button mat-button routerLink="/register" class="nav-link">Registrar tareas</button>
+    <button mat-button routerLink="/list" class="nav-link">Lista de tareas</button>
   </nav>
   <router-outlet></router-outlet>
 </div>
